--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".presentacion.EdicionLugarActivity"/>
         <activity android:name=".presentacion.VistaLugarActivity"/>
-        <activity android:name="presentacion.EdicionLugarActivity"/>
         <activity android:name=".casos_uso.CasosUsoLugar"/>
+        <activity android:name=".casos_uso.CasosUsoActividades"/>
         <activity android:name=".presentacion.PreferenciasActivity"/>
         <activity android:name=".presentacion.AcercaDeActivity"
             android:label="Acerca de ..."
