--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".presentacion.EdicionLugarActivity"/>
+        <activity android:name=".presentacion.AdaptadorLugares"/>
         <activity android:name=".presentacion.VistaLugarActivity"/>
         <activity android:name=".casos_uso.CasosUsoLugar"/>
         <activity android:name=".casos_uso.CasosUsoActividades"/>
